2001-09-15  James Henstridge  <james@daa.com.au>

	* gtk/gtkmodule.c (init_gtk): add test use of add_constants.

	* pygobject.h (_PyGObject_Functions): add new functions to header.

	* gobjectmodule.c (pyg_enum_add_constants): new function for
	adding constants to a module dictionary from a particular GType.
	(pyg_flags_add_constants): similar for flag types.
	(functions): add to export function vtable.

2001-09-14  James Henstridge  <james@daa.com.au>

	* pygtk-2.0.pc.in (defsdir): fix up defsdir definition.

	* Makefile.am (pkginclude_HEADERS): install ExtensionClass.h
	header (this can go when we switch over to python2.2 type/class
	stuff.

	* pygobject.h (pyg_register_boxed_custom): same change.

	* gobjectmodule.c (pyg_register_boxed_custom): rename from
	pyg_boxed_register to avoid confusion.

2001-09-14  James Henstridge  <james@daa.com.au>

	merge from short-class-names-branch

2001-09-12  James Henstridge  <james@daa.com.au>

	* codegen/codegen.py (write_class, write_interface): set the short
	name as the class name here.

	* gobjectmodule.c (pygobject_register_class): pass ec->tp_name as
	the name for the class passed to PyExtensionClass_Export*.

	* codegen/codegen.py (write_source): pass the C name to
	pygobject_register_class again.

2001-09-11  James Henstridge  <james@daa.com.au>

	* gtk/__init__.py (create_pixmap): few fixups to get things to
	import correctly.

	* gtk/gtkmodule.c (init_gtk): there is no _pygdk_register_boxed().

	* gtk/libglade.override (init): same here.

	* gtk/gtk.override (init): same here.

	* gtk/gdk.override (init): use short class names here.

	* gtk/gtkmodule.c (init_gtk): initialise both the gtk._gtk and
	gtk.gdk modules.

	* gtk/gtk.defs: don't include gdk.defs

	* gtk/gtk.override: remove all GDK override wrappers.

	* gtk/gdk.override: new file taking the overrides for GDK
	functions.

	* codegen/codegen.py (write_source): register only the short name
	of the GObject, interface or boxed type.
