@@ -174,20 +174,6 @@
 
 ;; Enumerations and flags ...
 
-(define-enum ColorContextMode
-  (in-module "Gdk")
-  (c-name "GdkColorContextMode")
-  (gtype-id "GDK_TYPE_COLOR_CONTEXT_MODE")
-  (values
-    '("undefined" "GDK_CC_MODE_UNDEFINED")
-    '("bw" "GDK_CC_MODE_BW")
-    '("std-cmap" "GDK_CC_MODE_STD_CMAP")
-    '("true" "GDK_CC_MODE_TRUE")
-    '("my-gray" "GDK_CC_MODE_MY_GRAY")
-    '("palette" "GDK_CC_MODE_PALETTE")
-  )
-)
-
 (define-enum CursorType
   (in-module "Gdk")
   (c-name "GdkCursorType")
@@ -496,58 +482,6 @@
   )
 )
 
-(define-enum IMStyle
-  (in-module "Gdk")
-  (c-name "GdkIMStyle")
-  (gtype-id "GDK_TYPE_IM_STYLE")
-  (values
-    '("preedit-area" "GDK_IM_PREEDIT_AREA")
-    '("preedit-callbacks" "GDK_IM_PREEDIT_CALLBACKS")
-    '("preedit-position" "GDK_IM_PREEDIT_POSITION")
-    '("preedit-nothing" "GDK_IM_PREEDIT_NOTHING")
-    '("preedit-none" "GDK_IM_PREEDIT_NONE")
-    '("preedit-mask" "GDK_IM_PREEDIT_MASK")
-    '("status-area" "GDK_IM_STATUS_AREA")
-    '("status-callbacks" "GDK_IM_STATUS_CALLBACKS")
-    '("status-nothing" "GDK_IM_STATUS_NOTHING")
-    '("status-none" "GDK_IM_STATUS_NONE")
-    '("status-mask" "GDK_IM_STATUS_MASK")
-  )
-)
-
-(define-flags ICAttributesType
-  (in-module "Gdk")
-  (c-name "GdkICAttributesType")
-  (gtype-id "GDK_TYPE_IC_ATTRIBUTES_TYPE")
-  (values
-    '("style" "GDK_IC_STYLE")
-    '("client-window" "GDK_IC_CLIENT_WINDOW")
-    '("focus-window" "GDK_IC_FOCUS_WINDOW")
-    '("filter-events" "GDK_IC_FILTER_EVENTS")
-    '("spot-location" "GDK_IC_SPOT_LOCATION")
-    '("line-spacing" "GDK_IC_LINE_SPACING")
-    '("cursor" "GDK_IC_CURSOR")
-    '("preedit-fontset" "GDK_IC_PREEDIT_FONTSET")
-    '("preedit-area" "GDK_IC_PREEDIT_AREA")
-    '("preedit-area-needed" "GDK_IC_PREEDIT_AREA_NEEDED")
-    '("preedit-foreground" "GDK_IC_PREEDIT_FOREGROUND")
-    '("preedit-background" "GDK_IC_PREEDIT_BACKGROUND")
-    '("preedit-pixmap" "GDK_IC_PREEDIT_PIXMAP")
-    '("preedit-colormap" "GDK_IC_PREEDIT_COLORMAP")
-    '("status-fontset" "GDK_IC_STATUS_FONTSET")
-    '("status-area" "GDK_IC_STATUS_AREA")
-    '("status-area-needed" "GDK_IC_STATUS_AREA_NEEDED")
-    '("status-foreground" "GDK_IC_STATUS_FOREGROUND")
-    '("status-background" "GDK_IC_STATUS_BACKGROUND")
-    '("status-pixmap" "GDK_IC_STATUS_PIXMAP")
-    '("status-colormap" "GDK_IC_STATUS_COLORMAP")
-    '("all-req" "GDK_IC_ALL_REQ")
-    '("preedit-area-req" "GDK_IC_PREEDIT_AREA_REQ")
-    '("preedit-position-req" "GDK_IC_PREEDIT_POSITION_REQ")
-    '("status-area-req" "GDK_IC_STATUS_AREA_REQ")
-  )
-)
-
 (define-enum ImageType
   (in-module "Gdk")
   (c-name "GdkImageType")
@@ -606,15 +540,6 @@
     '("ytilt" "GDK_AXIS_YTILT")
     '("wheel" "GDK_AXIS_WHEEL")
     '("last" "GDK_AXIS_LAST")
-  )
-)
-
-(define-flags ColorInfoFlags
-  (in-module "Gdk")
-  (c-name "GdkColorInfoFlags")
-  (gtype-id "GDK_TYPE_COLOR_INFO_FLAGS")
-  (values
-    '("e" "GDK_COLOR_WRITEABLE")
   )
 )
 
@@ -917,20 +842,6 @@
   )
 )
 
-(define-enum PixbufError
-  (in-module "Gdk")
-  (c-name "GdkPixbufError")
-  (gtype-id "GDK_TYPE_PIXBUF_ERROR")
-  (values
-    '("corrupt-image" "GDK_PIXBUF_ERROR_CORRUPT_IMAGE")
-    '("insufficient-memory" "GDK_PIXBUF_ERROR_INSUFFICIENT_MEMORY")
-    '("bad-option-value" "GDK_PIXBUF_ERROR_BAD_OPTION_VALUE")
-    '("unknown-type" "GDK_PIXBUF_ERROR_UNKNOWN_TYPE")
-    '("unsupported-operation" "GDK_PIXBUF_ERROR_UNSUPPORTED_OPERATION")
-    '("failed" "GDK_PIXBUF_ERROR_FAILED")
-  )
-)
-
 (define-enum InterpType
   (in-module "Gdk")
   (c-name "GdkInterpType")
@@ -943,16 +854,6 @@
   )
 )
 
-(define-enum PixbufFrameAction
-  (in-module "Gdk")
-  (c-name "GdkPixbufFrameAction")
-  (gtype-id "GDK_TYPE_PIXBUF_FRAME_ACTION")
-  (values
-    '("retain" "GDK_PIXBUF_FRAME_RETAIN")
-    '("dispose" "GDK_PIXBUF_FRAME_DISPOSE")
-    '("revert" "GDK_PIXBUF_FRAME_REVERT")
-  )
-)
 
 ;; From /opt/gtk2/include/gtk-2.0/gdk/gdkcolor.h
 
