@@ -1264,17 +1264,6 @@
   )
 )
 
-(define-enum MenuFactoryType
-  (in-module "Gtk")
-  (c-name "GtkMenuFactoryType")
-  (gtype-id "GTK_TYPE_MENU_FACTORY_TYPE")
-  (values
-    '("menu" "GTK_MENU_FACTORY_MENU")
-    '("menu-bar" "GTK_MENU_FACTORY_MENU_BAR")
-    '("option-menu" "GTK_MENU_FACTORY_OPTION_MENU")
-  )
-)
-
 (define-enum MetricType
   (in-module "Gtk")
   (c-name "GtkMetricType")
@@ -1415,20 +1404,6 @@
   )
 )
 
-(define-enum SignalRunType
-  (in-module "Gtk")
-  (c-name "GtkSignalRunType")
-  (gtype-id "GTK_TYPE_SIGNAL_RUN_TYPE")
-  (values
-    '("first" "GTK_RUN_FIRST")
-    '("last" "GTK_RUN_LAST")
-    '("both" "GTK_RUN_BOTH")
-    '("no-recurse" "GTK_RUN_NO_RECURSE")
-    '("action" "GTK_RUN_ACTION")
-    '("no-hooks" "GTK_RUN_NO_HOOKS")
-  )
-)
-
 (define-enum ScrollType
   (in-module "Gtk")
   (c-name "GtkScrollType")
@@ -1518,18 +1493,6 @@
     '("text" "GTK_TOOLBAR_TEXT")
     '("both" "GTK_TOOLBAR_BOTH")
     '("both-horiz" "GTK_TOOLBAR_BOTH_HORIZ")
-  )
-)
-
-(define-enum TroughType
-  (in-module "Gtk")
-  (c-name "GtkTroughType")
-  (gtype-id "GTK_TYPE_TROUGH_TYPE")
-  (values
-    '("none" "GTK_TROUGH_NONE")
-    '("start" "GTK_TROUGH_START")
-    '("end" "GTK_TROUGH_END")
-    '("jump" "GTK_TROUGH_JUMP")
   )
 )
 
@@ -1899,30 +1862,6 @@
     '("resizeable" "GTK_TREE_VIEW_COLUMN_RESIZEABLE")
     '("autosize" "GTK_TREE_VIEW_COLUMN_AUTOSIZE")
     '("fixed" "GTK_TREE_VIEW_COLUMN_FIXED")
-  )
-)
-
-(define-enum FundamentalType
-  (in-module "Gtk")
-  (c-name "GtkFundamentalType")
-  (gtype-id "GTK_TYPE_FUNDAMENTAL_TYPE")
-  (values
-    '("invalid" "GTK_TYPE_INVALID")
-    '("none" "GTK_TYPE_NONE")
-    '("enum" "GTK_TYPE_ENUM")
-    '("flags" "GTK_TYPE_FLAGS")
-    '("char" "GTK_TYPE_CHAR")
-    '("uchar" "GTK_TYPE_UCHAR")
-    '("bool" "GTK_TYPE_BOOL")
-    '("int" "GTK_TYPE_INT")
-    '("uint" "GTK_TYPE_UINT")
-    '("long" "GTK_TYPE_LONG")
-    '("ulong" "GTK_TYPE_ULONG")
-    '("float" "GTK_TYPE_FLOAT")
-    '("double" "GTK_TYPE_DOUBLE")
-    '("string" "GTK_TYPE_STRING")
-    '("boxed" "GTK_TYPE_BOXED")
-    '("pointer" "GTK_TYPE_POINTER")
   )
 )
 
