@@ -1,5 +1,16 @@
 2001-09-15  James Henstridge  <james@daa.com.au>
 
+	* gtk/__init__.py (TRUE): don't import GTK.
+
+	* gtk/gtkmodule.c (init_gtk): same here.
+
+	* pangomodule.c (initpango): add constants to the pango module.
+
+	* codegen/codegen.py (write_enums): new function that writes a
+	function to add constants for all the enums and flags in the
+	parser.
+	(write_source): call write_enums().
+
 	* gtk/gtkmodule.c (init_gtk): add test use of add_constants.
 
 	* pygobject.h (_PyGObject_Functions): add new functions to header.
